@@ -35,10 +35,12 @@ S3method(getFix,MCMCglmm)
 S3method(getFix,default)
 S3method(getFix,glm)
 S3method(getFix,glmer)
+S3method(getFix,glmerMod)
 S3method(getFix,gls)
 S3method(getFix,lm)
 S3method(getFix,lme)
 S3method(getFix,lmer)
+S3method(getFix,lmerMod)
 S3method(getFix,mer)
 S3method(getFix,mipo)
 S3method(getFix,multinom)
